# product-review-research

./: .gitignore  README.md  docker-compose.yml  index.html
.promptmage/: promptmage.db
html/: index.html
src/: Dockerfile  app.py  pyproject.toml
src/.promptmage/: promptmage.db
